--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: LaTeX Cheat Sheet
-description: Quick reference guide by Dave Richeson
+title: A Quick Guide to LaTeX — A LaTeX Cheat Sheet
+description: Reference guide by Dave Richeson
 theme: jekyll-theme-dinky
